// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots App Base 1`] = `
Array [
  <div
    className=""
  >
    <nav
      className="ag ah ai aj ak al am an ao ap aq ar as at au av"
      data-baseweb="header-navigation"
      role="navigation"
    >
      <div
        className="ak aw ax ay az b0 b1 b2"
      >
        <div
          className="b3 az"
        >
          <a
            href="/"
            onClick={[Function]}
            style={
              Object {
                "textDecoration": "none",
              }
            }
          >
            <h1
              className="b4 ae"
              data-baseweb="block"
            >
              Next Movie
            </h1>
          </a>
        </div>
      </div>
      <div
        className="ak aw ax b5 az b0 b6 b7"
      />
      <div
        className="ak aw ax ay az b0 b8 b9"
      >
        <div
          className="ba bb bc bd"
          data-baseweb="block"
        >
          <div
            className="ag be ai bf bg ak bh"
            data-baseweb="input"
          >
            <div
              className="bi ak bh bj bk bl bm bn bo bp bq br ag be ai bf bg bs bt"
              data-baseweb="base-input"
            >
              <div
                className="ak bu bv"
              >
                <svg
                  className="bw bx by bz c0"
                  data-baseweb="icon"
                  viewBox="0 0 24 24"
                >
                  <title>
                    Search
                  </title>
                  <path
                    clipRule="evenodd"
                    d="M11 6C8.79086 6 7 7.79086 7 10C7 12.2091 8.79086 14 11 14C13.2091 14 15 12.2091 15 10C15 7.79086 13.2091 6 11 6ZM5 10C5 6.68629 7.68629 4 11 4C14.3137 4 17 6.68629 17 10C17 11.2958 16.5892 12.4957 15.8907 13.4765L19.7071 17.2929C20.0976 17.6834 20.0976 18.3166 19.7071 18.7071C19.3166 19.0976 18.6834 19.0976 18.2929 18.7071L14.4765 14.8907C13.4957 15.5892 12.2958 16 11 16C7.68629 16 5 13.3137 5 10Z"
                    fillRule="evenodd"
                  />
                </svg>
              </div>
              <input
                aria-describedby={null}
                aria-invalid={false}
                aria-label={null}
                aria-labelledby={null}
                aria-required={false}
                autoComplete="on"
                className="bi ao c1 c2 c3 bh c4 c5 b4 c6 c7 c8 c9 ag be ai bf bg ca cb"
                disabled={false}
                id="typeahead"
                inputMode="text"
                name=""
                onBlur={[Function]}
                onChange={[Function]}
                onFocus={[Function]}
                onKeyDown={[Function]}
                onKeyPress={[Function]}
                onKeyUp={[Function]}
                pattern={null}
                placeholder="Search a movie by title"
                required={false}
                rows={null}
                type="text"
              />
            </div>
          </div>
        </div>
        <div
          className="b3 az"
        >
          <button
            className="cc bu b7 c1 c2 cd c3 ce cf bm bn cg ch ci cj ck cl cm cn ag ah co aj bq br bo bp c6 c7 bv cp cq cr cs ct cu"
            data-baseweb="button"
            disabled={false}
            onClick={[Function]}
          >
            Sign In
          </button>
        </div>
        <div
          className="b3 az"
        />
      </div>
    </nav>
    <div
      className=""
      data-baseweb="block"
    >
      <div
        className="cv az b0 cw cx"
      >
        <div
          className="card-deck cy"
          data-baseweb="block"
        >
          <h2
            className="ag cz af d0 d1"
            data-baseweb="block"
          >
            Popular movies
          </h2>
          <div
            className="bh d2 cy d3"
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
          >
            <ul
              className="d4 d5 d6 bh d7 ak d8 d9 da db dc"
            />
            <button
              className="dd aq de cg df dg dh di dj dk dl dm ba ar"
              onClick={[Function]}
            >
              &lt;
            </button>
            <button
              className="dd aq de cg df dg dh di dj dk dl dm ba as"
              onClick={[Function]}
            >
              &gt;
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>,
  <div
    className=""
  />,
]
`;

exports[`Storyshots components|CardDeck Base 1`] = `
Array [
  <div
    className=""
  >
    <div
      className="card-deck cy"
      data-baseweb="block"
    >
      <h2
        className="ag cz af d0 d1"
        data-baseweb="block"
      >
        Popular movies
      </h2>
      <div
        className="bh d2 cy d3"
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
      >
        <ul
          className="d4 d5 d6 bh d7 ak d8 d9 da db dc"
        >
          <li
            className="dn bi"
          >
            <div
              className="do bk dp dq bo bq bp br dr cg ds dt"
              data-baseweb="card"
              onClick={[Function]}
            >
              <img
                className="bo bq du c4"
                src="https://image.tmdb.org/t/p/w500/8j58iEBw9pOXFD2L0nt0ZXeHviB.jpg"
              />
              <div
                className="dv dw dx dy"
              >
                <h1
                  className="ag cz co d0 dz ck cl cm e0 e1 e2 e3 e4 e5 e6 e7 e8 e9"
                >
                  July 26
                </h1>
                <div
                  className="ea eb ag be ai bf"
                />
              </div>
            </div>
          </li>
          <li
            className="dn bi"
          >
            <div
              className="do bk dp dq bo bq bp br dr cg ds dt"
              data-baseweb="card"
              onClick={[Function]}
            >
              <img
                className="bo bq du c4"
                src="https://image.tmdb.org/t/p/w500/vqzNJRH4YyquRiWxCCOH0aXggHI.jpg"
              />
              <div
                className="dv dw dx dy"
              >
                <h1
                  className="ag cz co d0 dz ck cl cm e0 e1 e2 e3 e4 e5 e6 e7 e8 e9"
                >
                  November 1
                </h1>
                <div
                  className="ea eb ag be ai bf"
                />
              </div>
            </div>
          </li>
          <li
            className="dn bi"
          >
            <div
              className="do bk dp dq bo bq bp br dr cg ds dt"
              data-baseweb="card"
              onClick={[Function]}
            >
              <img
                className="bo bq du c4"
                src="https://image.tmdb.org/t/p/w500/tBuabjEqxzoUBHfbyNbd8ulgy5j.jpg"
              />
              <div
                className="dv dw dx dy"
              >
                <h1
                  className="ag cz co d0 dz ck cl cm e0 e1 e2 e3 e4 e5 e6 e7 e8 e9"
                >
                  October 18
                </h1>
                <div
                  className="ea eb ag be ai bf"
                />
              </div>
            </div>
          </li>
          <li
            className="dn bi"
          >
            <div
              className="do bk dp dq bo bq bp br dr cg ds dt"
              data-baseweb="card"
              onClick={[Function]}
            >
              <img
                className="bo bq du c4"
                src="https://image.tmdb.org/t/p/w500/p69QzIBbN06aTYqRRiCOY1emNBh.jpg"
              />
              <div
                className="dv dw dx dy"
              >
                <h1
                  className="ag cz co d0 dz ck cl cm e0 e1 e2 e3 e4 e5 e6 e7 e8 e9"
                >
                  November 8
                </h1>
                <div
                  className="ea eb ag be ai bf"
                />
              </div>
            </div>
          </li>
          <li
            className="dn bi"
          >
            <div
              className="do bk dp dq bo bq bp br dr cg ds dt"
              data-baseweb="card"
              onClick={[Function]}
            >
              <img
                className="bo bq du c4"
                src="https://image.tmdb.org/t/p/w500/pIcV8XXIIvJCbtPoxF9qHMKdRr2.jpg"
              />
              <div
                className="dv dw dx dy"
              >
                <h1
                  className="ag cz co d0 dz ck cl cm e0 e1 e2 e3 e4 e5 e6 e7 e8 e9"
                >
                  October 18
                </h1>
                <div
                  className="ea eb ag be ai bf"
                />
              </div>
            </div>
          </li>
          <li
            className="dn bi"
          >
            <div
              className="do bk dp dq bo bq bp br dr cg ds dt"
              data-baseweb="card"
              onClick={[Function]}
            >
              <img
                className="bo bq du c4"
                src="https://image.tmdb.org/t/p/w500/7IiTTgloJzvGI1TAYymCfbfl3vT.jpg"
              />
              <div
                className="dv dw dx dy"
              >
                <h1
                  className="ag cz co d0 dz ck cl cm e0 e1 e2 e3 e4 e5 e6 e7 e8 e9"
                >
                  October 11
                </h1>
                <div
                  className="ea eb ag be ai bf"
                />
              </div>
            </div>
          </li>
          <li
            className="dn bi"
          >
            <div
              className="do bk dp dq bo bq bp br dr cg ds dt"
              data-baseweb="card"
              onClick={[Function]}
            >
              <img
                className="bo bq du c4"
                src="https://image.tmdb.org/t/p/w500/jIbTPKCRWgmS2HaafKXeRaPHMGp.jpg"
              />
              <div
                className="dv dw dx dy"
              >
                <h1
                  className="ag cz co d0 dz ck cl cm e0 e1 e2 e3 e4 e5 e6 e7 e8 e9"
                >
                  November 8
                </h1>
                <div
                  className="ea eb ag be ai bf"
                />
              </div>
            </div>
          </li>
        </ul>
        <button
          className="dd aq de cg df dg dh di dj dk dl dm ba ar"
          onClick={[Function]}
        >
          &lt;
        </button>
        <button
          className="dd aq de cg df dg dh di dj dk dl dm ba as"
          onClick={[Function]}
        >
          &gt;
        </button>
      </div>
    </div>
  </div>,
  <div
    className=""
  />,
]
`;

exports[`Storyshots components|Login Base 1`] = `
Array [
  <div
    className=""
  />,
  <div
    className=""
  />,
]
`;

exports[`Storyshots components|Navigation Base 1`] = `
Array [
  <div
    className=""
  >
    <nav
      className="ag ah ai aj ak al am an ao ap aq ar as at au av"
      data-baseweb="header-navigation"
      role="navigation"
    >
      <div
        className="ak aw ax ay az b0 b1 b2"
      >
        <div
          className="b3 az"
        >
          <h1
            className="b4 ae"
            data-baseweb="block"
          >
            Next Movie
          </h1>
        </div>
      </div>
      <div
        className="ak aw ax b5 az b0 b6 b7"
      />
      <div
        className="ak aw ax ay az b0 b8 b9"
      >
        <div
          className="ba bb bc bd"
          data-baseweb="block"
        >
          <div
            className="ag be ai bf bg ak bh"
            data-baseweb="input"
          >
            <div
              className="bi ak bh bj bk bl bm bn bo bp bq br ag be ai bf bg bs bt"
              data-baseweb="base-input"
            >
              <div
                className="ak bu bv"
              >
                <svg
                  className="bw bx by bz c0"
                  data-baseweb="icon"
                  viewBox="0 0 24 24"
                >
                  <title>
                    Search
                  </title>
                  <path
                    clipRule="evenodd"
                    d="M11 6C8.79086 6 7 7.79086 7 10C7 12.2091 8.79086 14 11 14C13.2091 14 15 12.2091 15 10C15 7.79086 13.2091 6 11 6ZM5 10C5 6.68629 7.68629 4 11 4C14.3137 4 17 6.68629 17 10C17 11.2958 16.5892 12.4957 15.8907 13.4765L19.7071 17.2929C20.0976 17.6834 20.0976 18.3166 19.7071 18.7071C19.3166 19.0976 18.6834 19.0976 18.2929 18.7071L14.4765 14.8907C13.4957 15.5892 12.2958 16 11 16C7.68629 16 5 13.3137 5 10Z"
                    fillRule="evenodd"
                  />
                </svg>
              </div>
              <input
                aria-describedby={null}
                aria-invalid={false}
                aria-label={null}
                aria-labelledby={null}
                aria-required={false}
                autoComplete="on"
                className="bi ao c1 c2 c3 bh c4 c5 b4 c6 c7 c8 c9 ag be ai bf bg ca cb"
                disabled={false}
                inputMode="text"
                name=""
                onBlur={[Function]}
                onChange={[Function]}
                onFocus={[Function]}
                onKeyDown={[Function]}
                onKeyPress={[Function]}
                onKeyUp={[Function]}
                pattern={null}
                placeholder="Search a movie by title"
                required={false}
                rows={null}
                type="text"
              />
            </div>
          </div>
        </div>
        <div
          className="b3 az"
        >
          <button
            className="cc bu b7 c1 c2 cd c3 ce cf bm bn cg ch ci cj ck cl cm cn ag ah co aj bq br bo bp c6 c7 bv cp cq cr cs ct cu"
            data-baseweb="button"
            disabled={false}
            onClick={[Function]}
          >
            Sign In
          </button>
        </div>
        <div
          className="b3 az"
        />
      </div>
    </nav>
  </div>,
  <div
    className=""
  />,
]
`;

exports[`Storyshots components|Reel Base 1`] = `
Array [
  <div
    className=""
  >
    <div
      className="bh"
    >
      <div
        className="dd bh ec d2"
      >
        <div
          className="bh d7 dd ed ee"
        />
        <div
          className="dd ar as de ef eg"
        />
        <img
          alt="No backdrop"
          className="bh d7 eh"
          src="https://image.tmdb.org/t/p/w1280/n3UanIvmnBlH531pykuzNs4LbH6.jpg"
        />
      </div>
      <div
        className="ak cy ei az b0 cw cx"
      >
        <div
          className="ej ba ek d2 el em"
        >
          <img
            alt="No poster"
            className="bh en"
            src="https://image.tmdb.org/t/p/w500/6ApDtO7xaWAfPqfi2IARXIzj8QS.jpg"
          />
        </div>
        <div
          className="b5 ak eo"
        >
          <div
            className=""
          >
            <h2
              className="ep ag eq co er dh"
            >
              Ford v Ferrari
            </h2>
            <h3
              className="es ag dj co d0"
            />
            <div
              className=""
            >
              <div
                className="et eu"
                data-baseweb="block"
              />
            </div>
          </div>
          <div
            className="ev ak b3 ew ex"
          >
            <button
              className="dg ey cg cy ez f0 f1 f2 f3"
              onClick={[Function]}
            >
              <div
                className="bh d7 dd ed f4"
              />
              <img
                alt="No backdrop"
                className="bh en"
                src="https://image.tmdb.org/t/p/w1280/n3UanIvmnBlH531pykuzNs4LbH6.jpg"
              />
            </button>
            <button
              className="dg ey cg cy ez f0 f1 f2 f3"
              onClick={[Function]}
            >
              <div
                className="bh d7 dd ed f5"
              />
              <img
                alt="No backdrop"
                className="bh en"
                src="https://image.tmdb.org/t/p/w1280/1ZSjrBUHP2jm1QlQEyLGufL289q.jpg"
              />
            </button>
            <button
              className="dg ey cg cy ez f0 f1 f2 f3"
              onClick={[Function]}
            >
              <div
                className="bh d7 dd ed f5"
              />
              <img
                alt="No backdrop"
                className="bh en"
                src="https://image.tmdb.org/t/p/w1280/aZ1ZqJ4uO1RK5gU5jRsO4qG7rJo.jpg"
              />
            </button>
            <button
              className="dg ey cg cy ez f0 f1 f2 f3"
              onClick={[Function]}
            >
              <div
                className="bh d7 dd ed f5"
              />
              <img
                alt="No backdrop"
                className="bh en"
                src="https://image.tmdb.org/t/p/w1280/n3UanIvmnBlH531pykuzNs4LbH6.jpg"
              />
            </button>
            <button
              className="dg ey cg cy ez f0 f1 f2 f3"
              onClick={[Function]}
            >
              <div
                className="bh d7 dd ed f5"
              />
              <img
                alt="No backdrop"
                className="bh en"
                src="https://image.tmdb.org/t/p/w1280/1ZSjrBUHP2jm1QlQEyLGufL289q.jpg"
              />
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>,
  <div
    className=""
  />,
]
`;
